# pi-inky-weather-epd

./: .gitignore  Cargo.toml  README.md  WEB_SERVER.md  build.rs  default.toml  readme.md
config/: default.toml  development.toml  test.toml
src/: config.rs  epd_5in65f.rs  lib.rs  logger.rs  main.rs  network.rs  utils.rs  weather_dashboard.rs  web_server.rs
src/configs/: settings.rs
src/dashboard/: context.rs
